ingress/gateway.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_token"
spec:
  rules:
    - http:
        paths:
          - path: /main/?(.*)
            backend:
              serviceName: main-service
              servicePort: 8080
          - path: /?(.*)
            backend:
              serviceName: stream-service
              servicePort: 8080
